@@ -1,6 +1,11 @@
-icmake (7.12.2) ISN
+icmake (7.12.2)
 
-  * icmbuild will touch 'version.cc' only if it exists.
+  * icmbuild  touches 'version.cc' only if it exists.
+
+  * The built-in function 'gets()' will now remove a trailing \n as per the
+    icmake man-page
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 17 Jul 2009 13:20:33 +0200
 
 icmake (7.12.1)
 
